MGRENTITLE-39 Implement support for upgrade operation (#71)
- Add upgrade parameter to install request
- Remove skipped application flows
- Implement new flow-engine API
- Refactor installation flow to load data once and provide application flows dynamically
- Fix exception handler for new flow structure (now returns only failed stage instead of full execution)
- Adjust flow execution report names (add stage types for readability)
- Fix unit tests (stage context parameters now mostly belong to flow parameters)
- Remove plantUML diagrams
- Fix integration tests after refactoring
- Add KeycloakAuthResourceUpdater stage
- Remove examples from mgr-tenant-entitlements.yaml
- Update ModuleDescriptor.json (Redundant line breaks are removed to compact JSON)
- Enable flow engine logging for integration tests