@@ -1,6 +1,8 @@
 package org.folio.entitlement.support;
 
-import static java.util.stream.Collectors.toList;
+import static java.util.Collections.sort;
+import static java.util.Collections.unmodifiableList;
+import static java.util.Comparator.comparing;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.folio.entitlement.support.TestConstants.HTTP_CLIENT_DUMMY_SSL;
 import static org.folio.test.TestConstants.TENANT_ID;
@@ -17,11 +19,14 @@ import static org.springframework.http.HttpMethod.TRACE;
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static org.springframework.web.util.UriComponentsBuilder.fromUriString;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
 import java.io.IOException;
 import java.net.URI;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse.BodyHandlers;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -30,6 +35,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.log4j.Log4j2;
 import org.folio.entitlement.integration.keycloak.configuration.properties.KeycloakConfigurationProperties;
+import org.folio.entitlement.support.model.AuthorizationResource;
 import org.keycloak.admin.client.Keycloak;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.context.annotation.Bean;
@@ -57,7 +63,7 @@ public class KeycloakTestClientConfiguration {
     private final KeycloakConfigurationProperties keycloakConfiguration;
 
     @SneakyThrows
-    public List<String> getAuthorizationResources(String realm) {
+    public List<AuthorizationResource> getAuthorizationResources(String realm) {
       var clientId = getClientId(realm);
       var path = "/admin/realms/{realm}/clients/{clientId}/authz/resource-server/resource";
       var uri = fromUriString(keycloakConfiguration.getUrl() + path)
@@ -68,10 +74,27 @@ public class KeycloakTestClientConfiguration {
 
       var responseJson = sendAndParseGetResponseAsString(uri);
       return StreamSupport.stream(objectMapper.readTree(responseJson).spliterator(), false)
-        .map(node -> node.path("name").asText())
-        .filter(Objects::nonNull)
-        .sorted()
-        .collect(toList());
+        .map(KeycloakTestClient::toAuthorizationResource)
+        .sorted(comparing(AuthorizationResource::name))
+        .toList();
+    }
+
+    private static AuthorizationResource toAuthorizationResource(JsonNode node) {
+      var resourceName = node.path("name").asText();
+
+      var scopeNode = node.path("scopes");
+      var resultScopes = new ArrayList<String>();
+      if (scopeNode instanceof ArrayNode scopes) {
+        for (var scope : scopes) {
+          var scopeName = scope.path("name").asText();
+          if (scopeName != null) {
+            resultScopes.add(scopeName);
+          }
+        }
+      }
+
+      sort(resultScopes);
+      return new AuthorizationResource(resourceName, unmodifiableList(resultScopes));
     }
 
     @SneakyThrows
@@ -91,7 +114,7 @@ public class KeycloakTestClientConfiguration {
         .filter(Objects::nonNull)
         .map(HttpMethod::valueOf)
         .sorted()
-        .collect(toList());
+        .toList();
     }
 
     private String sendAndParseGetResponseAsString(URI uri) throws IOException, InterruptedException {
